--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "fs-extra": "^11.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.1"
@@ -31,6 +30,7 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "fs-extra": "^11.1.0"
   }
 }
