--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "baseUrl": "./",
+    "rootDir": ".",
+    "baseUrl": ".",
     "strictNullChecks": false,
     "module": "CommonJS",
     "moduleResolution": "node",
@@ -14,6 +15,9 @@
     "lib": ["dom", "es2017"],
     "skipLibCheck": true,
     "stripInternal": true,
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "exclude": ["node_modules"]
 }
