--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node --transpileOnly ./scripts/run"
+    "dev": "vite"
   },
   "repository": {
     "type": "git",
@@ -23,14 +23,15 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-vue": "^4.2.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.1"
   },
   "dependencies": {
     "chalk": "^4.1.2",
+    "fs-extra": "^11.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "fs-extra": "^11.1.0"
+    "react-dom": "^18.2.0"
   }
 }
