--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "echarts": "^5.4.2",
+    "less": "^4.1.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
-    "vite": "^4.1.1"
+    "vite": "^4.1.1",
+    "vue3-selecto": "^1.11.0"
   },
   "dependencies": {
     "chalk": "^4.1.2",
     "fs-extra": "^11.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vue": "^3.3.4"
   }
 }
